--- a/spirit/views/css/layout.css
+++ b/spirit/views/css/layout.css
@@ -2,3 +2,23 @@
     margin: 0;
     padding: 0;
 }
+
+header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: auto;
+        padding: 1em;
+        opacity: .9;
+    }
+    header h1 {
+        font-size: 1.3em;
+        font-weight: bold;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+}
+
+main {
+    margin-top: 5em;
+}
