Update admin view

--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="utf-8" />
-<title>{{title}} &ndash; Spirit Admin</title>
+<title>Spirit Admin &ndash; {{title}}</title>
 <meta name="author" content="Yichuan Shen" />
 <link rel="stylesheet" type="text/css" href="{{css}}" />
 
