Add admin nav bar

--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -12,6 +12,15 @@
 
 <header>
     <h1>Spirit Admin</h1>
+
+    <nav>
+        <ul>
+            <li><a href="#">Photos</a></li>
+            <li><a href="#">Albums</a></li>
+            <li><a href="#">Users</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
+    </nav>
 </header>
 
 <main>
