--- a/spirit/views/css/bootstrap.css
+++ b/spirit/views/css/bootstrap.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+@import url('layout.css');
+@import url('typography.css');
+@import url('colors.css');
+
+/* Source Sans Pro font */
+@import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,700');
+
 /*!
   Ionicons, v2.0.0
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
@@ -11,11 +18,10 @@
   used under CC BY http://creativecommons.org/licenses/by/4.0/
   Modified icons to fit ionicon’s grid from original.
 */
-@font-face { font-family: "Ionicons"; src: url("ionicons.eot?v=2.0.0"); src: url("ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("ionicons.ttf?v=2.0.0") format("truetype"), url("ionicons.woff?v=2.0.0") format("woff"), url("ionicons.svg?v=2.0.0#Ionicons") format("svg"); font-weight: normal; font-style: normal; }
-
-/* Source Sans Pro font */
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,700);
-
-@import url(layout.css);
-@import url(typography.css);
-@import url(colors.css);
+@font-face { 
+    font-family: "Ionicons"; 
+    src: url("ionicons.eot?v=2.0.0"); 
+    src: url("ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("ionicons.ttf?v=2.0.0") format("truetype"), url("ionicons.woff?v=2.0.0") format("woff"), url("ionicons.svg?v=2.0.0#Ionicons") format("svg"); 
+    font-weight: normal; 
+    font-style: normal; 
+}
