--- a/spirit/views/css/layout.css
+++ b/spirit/views/css/layout.css
@@ -15,7 +15,7 @@ header {
         float: left;
         margin-right: 1em;
         font-size: 1.3em;
-        font-weight: bold;
+        font-weight: lighter;
         letter-spacing: 2px;
         text-transform: uppercase;
 }
