Change to {{baseUrl}} variable

--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <title>Spirit Admin &ndash; {{title}}</title>
 <meta name="author" content="Yichuan Shen" />
-<link rel="stylesheet" type="text/css" href="{{css}}" />
+<link rel="stylesheet" type="text/css" href="{{baseUrl}}spirit/views/css/bootstrap.css" />
 
 </head>
 <body>
@@ -15,10 +15,10 @@
 
     <nav>
         <ul>
-            <li><a href="#">Photos</a></li>
-            <li><a href="#">Albums</a></li>
-            <li><a href="#">Users</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="{{baseUrl}}spirit/photos">Photos</a></li>
+            <li><a href="{{baseUrl}}spirit/albums">Albums</a></li>
+            <li><a href="{{baseUrl}}spirit/users">Users</a></li>
+            <li><a href="{{baseUrl}}spirit/settings">Settings</a></li>
         </ul>
     </nav>
 </header>
