--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -7,6 +7,8 @@
 <meta name="author" content="Yichuan Shen" />
 <link rel="stylesheet" type="text/css" href="{{baseUrl}}spirit/views/css/bootstrap.css" />
 
+<script src="//ajax.googleapis.com/ajax/libs/mootools/1.5.1/mootools-yui-compressed.js"></script>
+
 </head>
 <body>
 
