--- a/spirit/views/login.html
+++ b/spirit/views/login.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <title>Spirit Login</title>
 <meta name="author" content="Yichuan Shen" />
-<link rel="stylesheet" type="text/css" href="{{css}}" />
+<link rel="stylesheet" type="text/css" href="{{baseUrl}}spirit/views/css/bootstrap.css" />
 
 <script src="//ajax.googleapis.com/ajax/libs/mootools/1.5.1/mootools-yui-compressed.js"></script>
 
