--- a/spirit/views/css/bootstrap.css
+++ b/spirit/views/css/bootstrap.css
@@ -19,9 +19,9 @@
   Modified icons to fit ionicon’s grid from original.
 */
 @font-face { 
-    font-family: "Ionicons"; 
-    src: url("ionicons.eot?v=2.0.0"); 
-    src: url("ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("ionicons.ttf?v=2.0.0") format("truetype"), url("ionicons.woff?v=2.0.0") format("woff"), url("ionicons.svg?v=2.0.0#Ionicons") format("svg"); 
-    font-weight: normal; 
-    font-style: normal; 
+    font-family: "Ionicons";
+    src: url("../resources/ionicons.eot?v=2.0.0"); 
+    src: url("../resources/ionicons.eot?v=2.0.0#iefix") format("embedded-opentype"), url("../resources/ionicons.ttf?v=2.0.0") format("truetype"), url("../resources/ionicons.woff?v=2.0.0") format("woff"), url("../resources/ionicons.svg?v=2.0.0#Ionicons") format("svg");
+    font-weight: normal;
+    font-style: normal;
 }
