--- a/spirit/views/css/layout.css
+++ b/spirit/views/css/layout.css
@@ -42,8 +42,19 @@ nav ul {
     nav ul li:nth-child(1) a::before { content: "\f147"; }
     nav ul li:nth-child(2) a::before { content: "\f148"; }
     nav ul li:nth-child(3) a::before { content: "\f212"; }
-    nav ul li:nth-child(4) a::before { content: "\f2ad"; }
+nav ul li:nth-child(4) a::before { content: "\f2ad"; }
 
 main {
-    margin-top: 5em;
+    margin-top: 4em;
+    padding: 1em;
 }
+
+#photos {
+        list-style: none;
+    }
+    #photos li {
+        display: block;
+        float: left;
+        margin-bottom: 1em;
+        margin-right: 1em;
+    }
