--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -17,10 +17,10 @@
 
     <nav>
         <ul>
-            <li{{#pagePhotos}} class="current"{{/pagePhotos}}><a href="{{baseUrl}}spirit/photos">Photos</a></li>
-            <li{{#pageAlbums}} class="current"{{/pageAlbums}}><a href="{{baseUrl}}spirit/albums">Albums</a></li>
-            <li{{#pageUsers}} class="current"{{/pageUsers}}><a href="{{baseUrl}}spirit/users">Users</a></li>
-            <li{{#pageSettings} class="current"{{/pageSettings}}><a href="{{baseUrl}}spirit/settings">Settings</a></li>
+            <li{{#mainPhotos}} class="current"{{/mainPhotos}}><a href="{{baseUrl}}spirit/photos">Photos</a></li>
+            <li{{#mainAlbums}} class="current"{{/mainAlbums}}><a href="{{baseUrl}}spirit/albums">Albums</a></li>
+            <li{{#mainUsers}} class="current"{{/mainUsers}}><a href="{{baseUrl}}spirit/users">Users</a></li>
+            <li{{#mainSettings} class="current"{{/mainSettings}}><a href="{{baseUrl}}spirit/settings">Settings</a></li>
         </ul>
     </nav>
 </header>
