--- a/spirit/views/css/typography.css
+++ b/spirit/views/css/typography.css
@@ -1,7 +1,9 @@
 body {
-    font: 100% 'Source Sans Pro', sans-serif;
+    font: 120% 'Source Sans Pro', sans-serif;
 }
 
 h1, h2 { font-weight: lighter; }
 h1 { font-size: 3em; }
 h2 { font-size: 2em; }
+
+img { vertical-align: middle; }
