--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -1,5 +1,9 @@
 <ol id="photos">
 {{#photos}}
-    <li><img src="{{thumbnailLink}}" alt="{{title}}" /></li>
+    <li>
+        <a class="permalink" href="{{permalink}}" title="Permalink to &lsquo;{{title}}&rsquo;">Permalink</a>
+        <a class="delete" href="" title="Permanently delete &lsquo;{{title}}&rsquo;">Delete</a>
+        <img src="{{thumbnailLink}}" alt="{{title}}" />
+    </li>
 {{/photos}}
 </ol>
