--- a/spirit/views/css/bootstrap.css
+++ b/spirit/views/css/bootstrap.css
@@ -3,6 +3,7 @@
 @import url('layout.css');
 @import url('typography.css');
 @import url('colors.css');
+@import url('components.css');
 
 /* Source Sans Pro font */
 @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,700');
