--- a/spirit/views/css/layout.css
+++ b/spirit/views/css/layout.css
@@ -8,8 +8,8 @@ header {
         top: 0;
         left: 0;
         right: 0;
+        z-index: 999;
         padding: 1em;
-        opacity: .9;
     }
     header h1 {
         float: left;
