--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -21,6 +21,9 @@
             <li{{#mainAlbums}} class="current"{{/mainAlbums}}><a href="{{baseUrl}}spirit/albums">Albums</a></li>
             <li{{#mainUsers}} class="current"{{/mainUsers}}><a href="{{baseUrl}}spirit/users">Users</a></li>
             <li{{#mainSettings} class="current"{{/mainSettings}}><a href="{{baseUrl}}spirit/settings">Settings</a></li>
+            {{#user}}
+            <li><a href="#">{{name}}</a></li>
+            {{/user}}
         </ul>
     </nav>
 </header>
