--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -5,15 +5,18 @@
 <meta charset="utf-8" />
 <title>Spirit Admin &ndash; {{title}}</title>
 <meta name="author" content="Yichuan Shen" />
-<link rel="stylesheet" type="text/css" href="{{baseUrl}}spirit/views/css/bootstrap.css" />
+<meta name="viewport" content="width=device-width, user-scalable=no">
 
+<link rel="stylesheet" type="text/css" href="{{baseUrl}}spirit/views/css/bootstrap.css" />
 <script src="//ajax.googleapis.com/ajax/libs/mootools/1.5.1/mootools-yui-compressed.js"></script>
 
 </head>
 <body>
 
+<div id="root">
+
 <header>
-    <h1>Spirit Admin</h1>
+    <h1>Spirit</h1>
 
     <nav>
         <ul>
@@ -28,9 +31,9 @@
     </nav>
 </header>
 
-<main>
 {{{main}}}
-</main>
+
+</div>
 
 </body>
 </html>
