--- a/spirit/views/css/layout.css
+++ b/spirit/views/css/layout.css
@@ -1,54 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-}
+header h1 { float: left; }
 
-header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 999;
-        padding: 1em;
-    }
-    header h1 {
-        float: left;
-        margin-right: 1em;
-        font-size: 1.3em;
-        font-weight: lighter;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-}
-
-nav ul {
-        list-style: none;
-        overflow: hidden;
-        font-size: .8em;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-    }
-    nav ul li a {
-        display: block;
-        float: left;
-        margin-left: 1em;
-        padding: 5px 10px;
-        vertical-align: middle;
-        text-decoration: none;
-    }
-    nav ul li a::before {
-        margin-right: 5px;
-        font: 1em Ionicons;
-    }
-    nav ul li:nth-child(1) a::before { content: "\f147"; }
-    nav ul li:nth-child(2) a::before { content: "\f148"; }
-    nav ul li:nth-child(3) a::before { content: "\f212"; }
-    nav ul li:nth-child(4) a::before { content: "\f2ad"; }
-    nav ul li:last-child a::before { content: "\f213"; }
+nav ul { margin: 0; }
 nav ul li:last-child { float: right; }
-
-main {
-    display: block;
-    margin-top: 4em;
-    overflow: hidden;
-    padding: 1em;
-}
