--- a/spirit/views/css/bootstrap.css
+++ b/spirit/views/css/bootstrap.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 @import url('layout.css');
+@import url('layout-large.css') only screen and (min-width: 600px);
 @import url('typography.css');
 @import url('colors.css');
 @import url('components.css');
