--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -1,10 +1,24 @@
+<div id="toolbox">
+    <ul>
+        <li class="edit"><a href="#">Edit</a></li>
+        <li class="delete"><a href="#">Delete</a></li>
+        <li class="filter"><a href="#">Album</a></li>
+        <li class="filter"><a href="#">Date</a></li>
+    </ul>
+</div>
+
 <main>
-    <ol id="photos">
-    {{#photos}}
+    {{#hasPhotos}}
+    <ol class="photostream">
+        {{#photos}}
         <li>
             <a class="permalink" href="{{permalink}}" title="Permalink to &lsquo;{{title}}&rsquo;">Permalink</a>
             <img src="{{thumbnailLink}}" alt="{{title}}" />
         </li>
-    {{/photos}}
+        {{/photos}}
     </ol>
+    {{/hasPhotos}}
+    {{^hasPhotos}}
+    Why not upload some photos?
+    {{/hasPhotos}}
 </main>
