--- a/spirit/views/css/components.css
+++ b/spirit/views/css/components.css
@@ -32,7 +32,7 @@
         z-index: 1;
     }
     .photostream li a:hover::before { 
-        background: #0082f0; 
+        background: #26292A; 
         text-shadow: none;
     }
     .photostream li a.permalink::before {
