--- a/spirit/views/css/layout.css
+++ b/spirit/views/css/layout.css
@@ -29,12 +29,12 @@ nav ul, #toolbox ul {
     nav ul li a, #toolbox ul li a {
         display: block;
         float: left;
-        margin: .2em 1em .3em 0;
-        padding: 5px 10px;
+        margin: .3em 1em .2em 0;
+        padding: .4em .7em;
         text-decoration: none;
     }
     nav ul li a::before, #toolbox li a::before, #toolbox li a::after {
-        margin-right: 5px;
+        margin-right: .5em;
         font: 1em Ionicons;
     }
     nav ul li:nth-child(1) a::before { content: "\f147"; }
@@ -43,15 +43,25 @@ nav ul, #toolbox ul {
     nav ul li:nth-child(4) a::before { content: "\f2ad"; }
 nav ul li:last-child a::before { content: "\f213"; }
 
-#toolbox { padding: .3em 1em; }
-    #toolbox ul { margin: 0; }
+#toolbox { padding: .5em 1em; }
+    #toolbox ul { 
+        margin: 0;
+        font-size: 1em;
+        letter-spacing: 0;
+        line-height: 1em;
+        text-transform: none; 
+    }
+    #toolbox ul li a {
+        padding: .3em .6em;
+    }
     #toolbox ul li a::after {
         margin-right: 0;
-        margin-left: 5px;
+        margin-left: .5em;
     }
     #toolbox ul li.edit a::before { content: "\f2bf"; }
     #toolbox ul li.delete a::before { content: "\f252"; }
-    #toolbox ul li.filter a::after { content: "\f3d0"; }
+    #toolbox ul li.clearFilters a::before { content: "\f36e"; }
+#toolbox ul li.filter a::after { content: "\f35f"; }
 
 main {
     display: block;
