--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -5,6 +5,7 @@
         {{/filters}}
         <li class="filter"><a href="#">Album</a></li>
         <li class="filter"><a href="#">Month</a></li>
+        <li class="upload"><a href="#">Upload</a></li>
         <li class="edit"><a href="#">Edit</a></li>
         <li class="delete"><a href="#">Delete</a></li>
     </ul>
@@ -25,3 +26,5 @@
     Nothing found. Why not <em>upload</em> some photos?
 {{/hasPhotos}}
 </main>
+
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/photostream.js"></script>
