--- a/spirit/views/css/layout.css
+++ b/spirit/views/css/layout.css
@@ -58,6 +58,7 @@ nav ul li:last-child a::before { content: "\f213"; }
         margin-right: 0;
         margin-left: .5em;
     }
+    #toolbox ul li.upload a::before { content: "\f366"; }
     #toolbox ul li.edit a::before { content: "\f2bf"; }
     #toolbox ul li.delete a::before { content: "\f252"; }
     #toolbox ul li.clearFilters a::before { content: "\f36e"; }
