--- a/spirit/views/css/typography.css
+++ b/spirit/views/css/typography.css
@@ -7,4 +7,8 @@ h1, h2 { font-weight: lighter; }
 h1 { font-size: 3em; }
 h2 { font-size: 2em; }
 
+h2, h3, h4, h5, h6, p, ol, ul, blockquote {
+    margin: 1em 0;
+}
+
 img { vertical-align: middle; }
