--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -24,7 +24,7 @@
             <input type="checkbox" name="photoId[]" value="{{id}}" />
             <a class="permalink" href="{{permalink}}" title="Permalink to &lsquo;{{title}}&rsquo;">Permalink</a>
             <a href="{{baseUrl}}spirit/photos/edit/{{id}}" title="Edit &lsquo;{{title}}&rsquo;">
-                <img src="{{thumbnailLink}}" alt="{{title}}" />
+                <img width="{{thumbWidth}}" height="{{thumbHeight}}" src="{{thumbnailLink}}" alt="{{title}}" />
             </a>
         </li>{{/photos}}
     </ol>
