Remove Mustache::finaliseTemplate

--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -21,7 +21,7 @@
             <li{{#mainPhotos}} class="current"{{/mainPhotos}}><a href="{{baseUrl}}spirit/photos">Photos</a></li>
             <li{{#mainAlbums}} class="current"{{/mainAlbums}}><a href="{{baseUrl}}spirit/albums">Albums</a></li>
             <li{{#mainUsers}} class="current"{{/mainUsers}}><a href="{{baseUrl}}spirit/users">Users</a></li>
-            <li{{#mainSettings} class="current"{{/mainSettings}}><a href="{{baseUrl}}spirit/settings">Settings</a></li>
+            <li{{#mainSettings}} class="current"{{/mainSettings}}><a href="{{baseUrl}}spirit/settings">Settings</a></li>
             {{#user}}
             <li><a href="{{baseUrl}}spirit/users/{{id}}">{{name}}</a></li>
             {{/user}}
