--- a/spirit/views/css/bootstrap.css
+++ b/spirit/views/css/bootstrap.css
@@ -1,10 +1,12 @@
 @charset "UTF-8";
 
 @import url('layout.css');
-@import url('layout-large.css') only screen and (min-width: 700px);
-@import url('typography.css');
+@import url('icons.css');
 @import url('colors.css');
+@import url('typography.css');
+@import url('form.css');
 @import url('components.css');
+@import url('large.css') only screen and (min-width: 700px);
 
 /* Source Sans Pro font */
 @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,700');
