--- a/spirit/views/css/colors.css
+++ b/spirit/views/css/colors.css
@@ -42,10 +42,7 @@ nav li.current a, nav li a:hover {
         background: #ccc;
         opacity: 1;
     }
-    #toolbox li {
-        transition: opacity .2s;
-    }
-    #toolbox li.clearFilters a {
+    #toolbox li.back a, #toolbox li.clearFilter a {
         background: #ccc;
     }
     #toolbox li.edit a:hover {
