Add autoresize ace

--- a/spirit/views/css/form.css
+++ b/spirit/views/css/form.css
@@ -39,7 +39,7 @@ textarea, #ace {
     font-family: Consolas, Monaco, 'Courier New', monospace;
     height: 10em;
 }
-.ace_hidden-cursors { opacity: 0; }
+#ace { height: auto; }
 
 button, .button {
     padding: .3em .6em;
